--- a/AndroidTrivia/app/build.gradle
+++ b/AndroidTrivia/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation "com.google.android.material:material:1.3.0-alpha02"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "com.google.android.material:material:$supportlibVersion"
 }
