--- a/MarsRealEstate/app/build.gradle
+++ b/MarsRealEstate/app/build.gradle
@@ -67,7 +67,9 @@ dependencies {
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
-    //Retrofit Libraries
-    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    //Retrofit using converter-moshi
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    //Moshi JSON library with Kotlin support
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 }
