--- a/MarsRealEstate/app/build.gradle
+++ b/MarsRealEstate/app/build.gradle
@@ -39,12 +39,10 @@ android {
     buildFeatures {
         dataBinding true
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -67,9 +65,9 @@ dependencies {
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
-    //Retrofit using converter-moshi
-    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
-
-    //Moshi JSON library with Kotlin support
+    // Moshi
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 }
