--- a/MarsRealEstate/app/build.gradle
+++ b/MarsRealEstate/app/build.gradle
@@ -44,6 +44,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -70,4 +73,7 @@ dependencies {
 
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    //Glide Library
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 }
